--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "scss2wxss",
   "version": "1.0.0",
   "description": "scss2wxss",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "build2css": " chokidar '**/*.scss' -c '' ",
-    "build2wxss": "node buildwxss.js",
+    "build": "node ./main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,7 +15,6 @@
   "license": "MIT",
   "devDependencies": {
     "chokidar": "^3.3.1",
-    "chokidar-cli": "^2.1.0",
     "node-sass": "^4.13.1"
   }
 }
