--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "scss2wxss",
   "version": "1.0.0",
   "description": "scss2wxss",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
-    "build": "node ./main.js",
+    "build": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
