--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "use node-sass compiler scss to ccs file ,then write css file to .wxss file",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rosendolu/scss2wxss.git"
+  },
   "scripts": {
     "build": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,8 +17,9 @@
   ],
   "author": "rosendlu",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "chokidar": "^3.3.1",
     "node-sass": "^4.13.1"
-  }
+  },
+  "devDependencies": {}
 }
